--- a/docs/api_reference/theme/mlflow/static/css/custom.css
+++ b/docs/api_reference/theme/mlflow/static/css/custom.css
@@ -34,93 +34,123 @@
 .db-icon-arrow-down-circle:before {
 	content: "\e900";
 }
+
 .db-icon-arrow-down:before {
 	content: "\e901";
 }
+
 .db-icon-arrow-left-circle:before {
 	content: "\e902";
 }
+
 .db-icon-arrow-left:before {
 	content: "\e903";
 }
+
 .db-icon-arrow-right-circle:before {
 	content: "\e904";
 }
+
 .db-icon-arrow-right:before {
 	content: "\e905";
 }
+
 .db-icon-arrow-up-circle:before {
 	content: "\e906";
 }
+
 .db-icon-arrow-up:before {
 	content: "\e907";
 }
+
 .db-icon-checkmark:before {
 	content: "\e908";
 }
+
 .db-icon-chevron-down:before {
 	content: "\e909";
 }
+
 .db-icon-chevron-left:before {
 	content: "\e90a";
 }
+
 .db-icon-chevron-right:before {
 	content: "\e90b";
 }
+
 .db-icon-chevron-up:before {
 	content: "\e90c";
 }
+
 .db-icon-close:before {
 	content: "\e90d";
 }
+
 .db-icon-dbce:before {
 	content: "\e90e";
 }
+
 .db-icon-facebook:before {
 	content: "\e90f";
 }
+
 .db-icon-linkedin:before {
 	content: "\e910";
 }
+
 .db-icon-menu:before {
 	content: "\e911";
 }
+
 .db-icon-newsletter:before {
 	content: "\e912";
 }
+
 .db-icon-pdf:before {
 	content: "\e913";
 }
+
 .db-icon-play-large:before {
 	content: "\e914";
 }
+
 .db-icon-play:before {
 	content: "\e915";
 }
+
 .db-icon-plus-circle-filled:before {
 	content: "\e916";
 }
+
 .db-icon-rss:before {
 	content: "\e917";
 }
+
 .db-icon-search:before {
 	content: "\e918";
 }
+
 .db-icon-share:before {
 	content: "\e919";
 }
+
 .db-icon-slideshow-left:before {
 	content: "\e91a";
 }
+
 .db-icon-slideshow-right:before {
 	content: "\e91b";
 }
+
 .db-icon-twitter-bird:before {
 	content: "\e91c";
 }
+
 .db-icon-twitter:before {
 	content: "\e91d";
 }
+
 .db-icon-webinar:before {
 	content: "\e91e";
 }
@@ -178,8 +208,8 @@ mark,
 .rst-content table.field-list thead th,
 .wy-menu-vertical header,
 .wy-menu-vertical p.caption,
-.wy-side-nav-search > a,
-.wy-side-nav-search .wy-dropdown > a,
+.wy-side-nav-search>a,
+.wy-side-nav-search .wy-dropdown>a,
 .rst-content .topic-title,
 .rst-content .sidebar .sidebar-title,
 .rst-content .highlighted,
@@ -227,7 +257,7 @@ table {
 	background-color: #fff;
 }
 
-table > colgroup:first-child {
+table>colgroup:first-child {
 	display: none;
 }
 
@@ -273,7 +303,8 @@ table > colgroup:first-child {
  */
 
 .wy-nav-top {
-	display: block; /* Overriding the theme which sets it to none(since it use to only be mobile. */
+	display: block;
+	/* Overriding the theme which sets it to none(since it use to only be mobile. */
 	border: none !important;
 	position: fixed;
 }
@@ -333,7 +364,8 @@ table > colgroup:first-child {
 }
 
 .wy-nav-top.header ul {
-	height: 55px; /* Important for item sizing */
+	height: 55px;
+	/* Important for item sizing */
 }
 
 .wy-nav-top.header li {
@@ -369,7 +401,8 @@ table > colgroup:first-child {
 	color: #2980b9;
 	font-weight: lighter;
 	margin-right: 14px;
-	line-height: 62px; /* For aligning the bottom of this text with the menu toggle and logo */
+	line-height: 62px;
+	/* For aligning the bottom of this text with the menu toggle and logo */
 }
 
 .wy-nave-shift {
@@ -441,7 +474,8 @@ table > colgroup:first-child {
 .wy-nav-side [role="contentinfo"] {
 	padding-left: 30px;
 	font-weight: lighter;
-	width: 300px; /* Hack to stop text overflow until it sidebar is cleaned up */
+	width: 300px;
+	/* Hack to stop text overflow until it sidebar is cleaned up */
 	padding-top: 20px;
 	padding-bottom: 20px;
 	border-top: 1px solid #c9c9c9;
@@ -452,7 +486,7 @@ table > colgroup:first-child {
 }
 
 /* Logo */
-.wy-side-nav-search > a.header-logo {
+.wy-side-nav-search>a.header-logo {
 	/* Unfortunately, we have to use a pretty specific selector */
 	display: block;
 	padding: 0;
@@ -460,12 +494,12 @@ table > colgroup:first-child {
 }
 
 @media screen and (max-width: 768px) {
-	.wy-side-nav-search > a.header-logo {
+	.wy-side-nav-search>a.header-logo {
 		display: none;
 	}
 }
 
-.wy-side-nav-search > a.header-logo:hover {
+.wy-side-nav-search>a.header-logo:hover {
 	background-color: transparent;
 }
 
@@ -489,19 +523,24 @@ table > colgroup:first-child {
 	border-radius: 40px;
 	font-size: 16px;
 }
+
 .wy-side-nav-search input[type="text"]:focus {
 	background-color: #e5e5e5;
 	border-color: #eee;
 }
+
 .wy-side-nav-search input[type="text"]::-webkit-input-placeholder {
 	color: #555;
 }
+
 .wy-side-nav-search input[type="text"]::-moz-placeholder {
 	color: #555;
 }
+
 .wy-side-nav-search input[type="text"]:-ms-input-placeholder {
 	color: #555;
 }
+
 .wy-side-nav-search input[type="text"]::placeholder {
 	color: #555;
 }
@@ -521,7 +560,7 @@ table > colgroup:first-child {
 .wy-menu-vertical a,
 .wy-menu-vertical li.on a,
 .wy-menu-vertical li.current a,
-.wy-menu-vertical li.current > a {
+.wy-menu-vertical li.current>a {
 	color: #606770;
 	padding: 6px 30px !important;
 	font-size: 14px;
@@ -534,12 +573,12 @@ table > colgroup:first-child {
 .wy-menu-vertical a:hover,
 .wy-menu-vertical li.on a:hover,
 .wy-menu-vertical li.current a:hover,
-.wy-menu-vertical li.current > a:hover {
+.wy-menu-vertical li.current>a:hover {
 	background-color: #f0f0f0 !important;
 }
 
-.wy-menu-vertical > ul.current > li.current > ul.current > li.current > a,
-.wy-menu-vertical > ul.current > li.current > a {
+.wy-menu-vertical>ul.current>li.current>ul.current>li.current>a,
+.wy-menu-vertical>ul.current>li.current>a {
 	padding-bottom: 6px;
 	margin-bottom: 6px;
 	background-color: #0000000d !important;
@@ -548,7 +587,8 @@ table > colgroup:first-child {
 	line-height: 1.25;
 	border-radius: 0.25rem;
 }
-.wy-menu-vertical > ul.current:not(:first-of-type) > li.current {
+
+.wy-menu-vertical>ul.current:not(:first-of-type)>li.current {
 	padding-top: 6px;
 	margin-top: 6px;
 }
@@ -556,18 +596,23 @@ table > colgroup:first-child {
 .wy-menu-vertical li.current {
 	background: transparent;
 }
+
 .wy-menu-vertical li.current li a {
 	padding-left: calc(30px + 1.5em) !important;
 }
+
 .wy-menu-vertical li.current li li a {
 	padding-left: calc(30px + 3em) !important;
 }
+
 .wy-menu-vertical li.current li li li a {
 	padding-left: calc(30px + 4.5em) !important;
 }
+
 .wy-menu-vertical li.current li li li li a {
 	padding-left: calc(30px + 6em) !important;
 }
+
 .wy-menu-vertical li.current li li li li li a {
 	padding-left: calc(30px + 7.5em) !important;
 }
@@ -585,7 +630,7 @@ table > colgroup:first-child {
 }
 
 .wy-menu-vertical li.on a span.toctree-expand:before,
-.wy-menu-vertical li.current > a span.toctree-expand:before {
+.wy-menu-vertical li.current>a span.toctree-expand:before {
 	content: "–";
 	font-weight: bold;
 }
@@ -653,7 +698,8 @@ table > colgroup:first-child {
 .wy-nav-content-wrap ol ol,
 .wy-nav-content-wrap ul ul,
 .wy-nav-content-wrap ol ul {
-	margin-bottom: 0 !important; /* Ugh... */
+	margin-bottom: 0 !important;
+	/* Ugh... */
 }
 
 .wy-nav-content-wrap a:hover {
@@ -678,7 +724,8 @@ table > colgroup:first-child {
 .wy-nav-content-wrap h2 {
 	font-weight: 500;
 	font-size: 34px;
-	margin-top: 1.2em; /* Was 1.5 but decreased to 1.2 to account for .section:before scroll fix. */
+	margin-top: 1.2em;
+	/* Was 1.5 but decreased to 1.2 to account for .section:before scroll fix. */
 	margin-bottom: 0.5em;
 }
 
@@ -720,6 +767,7 @@ table > colgroup:first-child {
 	font-weight: 600;
 	transition: none;
 }
+
 a.btn,
 a.btn:hover,
 a.btn:focus,
@@ -741,6 +789,7 @@ a.btn:active {
 	background: #1cb1c2 !important;
 	border-color: #1cb1c2 !important;
 }
+
 .btn-neutral:hover,
 .btn-neutral:active,
 .btn-neutral:focus {
@@ -791,7 +840,7 @@ a.btn:active {
 	text-transform: unset !important;
 }
 
-.rst-footer-buttons .btn + .btn {
+.rst-footer-buttons .btn+.btn {
 	margin-left: 1em;
 }
 
@@ -815,6 +864,7 @@ a.btn:active {
 	line-height: 1em;
 	padding: 0.35em 0.5em;
 }
+
 .rst-content .admonition-title:before {
 	content: " ";
 	display: inline-block;
@@ -942,7 +992,8 @@ div[class^="highlight"] pre {
 .embedded-notebook .embedded-notebook-container:before {
 	content: "Loading Notebook...";
 	position: absolute;
-	top: 130px; /* 30px (spinner's margin top) + 80px (spinner) + 20px */
+	top: 130px;
+	/* 30px (spinner's margin top) + 80px (spinner) + 20px */
 	left: 50%;
 	margin-left: -100px;
 	width: 200px;
@@ -966,21 +1017,25 @@ div[class^="highlight"] pre {
 	margin-bottom: 60px !important;
 	margin-top: 0.5rem !important;
 }
+
 .wy-breadcrumbs li {
 	font-size: 13px !important;
 	color: rgb(28, 30, 33);
 }
+
 .wy-breadcrumbs li a {
 	padding: 6px 12px;
 	border-radius: 24px;
 	font-size: 13px !important;
 	color: rgb(28, 30, 33);
 }
+
 .wy-breadcrumbs li a:hover {
 	background-color: #0000000d;
 	color: #0194e2;
 	text-decoration: none;
 }
+
 .wy-breadcrumbs .db-icon {
 	margin-left: 0.5em;
 	margin-right: 0.5em;
@@ -1024,27 +1079,32 @@ div[class^="highlight"] pre {
 	-webkit-animation: spin 1.1s infinite linear;
 	animation: spin 1.1s infinite linear;
 }
+
 .loading-spinner,
 .loading-spinner:after {
 	border-radius: 50%;
 	width: 1em;
 	height: 1em;
 }
+
 @-webkit-keyframes spin {
 	0% {
 		-webkit-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
 }
+
 @keyframes spin {
 	0% {
 		-webkit-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
@@ -1109,24 +1169,30 @@ div[class^="highlight"] pre {
  */
 
 .boxes-wrapper {
-	display: flex; /* This makes children flex items */
-	justify-content: space-between; /* Creates space between the boxes */
+	display: flex;
+	/* This makes children flex items */
+	justify-content: space-between;
+	/* Creates space between the boxes */
 }
 
 .left-box,
 .right-box {
-	flex: 1; /* This ensures that both boxes try to take up equal width */
+	flex: 1;
+	/* This ensures that both boxes try to take up equal width */
 	padding: 10px;
 	border: 2px solid #ccc;
 	border-radius: 15px;
 	background-color: #f9f9f9;
-	margin: 0 5px; /* Gives some space between the boxes */
-	box-sizing: border-box; /* Ensures padding and border are included in the element's total width and height */
+	margin: 0 5px;
+	/* Gives some space between the boxes */
+	box-sizing: border-box;
+	/* Ensures padding and border are included in the element's total width and height */
 	text-align: left;
 }
 
 .right-box {
-	margin-right: 0; /* Resetting any margin for the right-most box */
+	margin-right: 0;
+	/* Resetting any margin for the right-most box */
 }
 
 /**
@@ -1140,12 +1206,16 @@ div[class^="highlight"] pre {
 }
 
 .hierarchy-item {
-	display: block; /* Start each element on a new line */
-	width: fit-content; /* Adjust box width to the text */
+	display: block;
+	/* Start each element on a new line */
+	width: fit-content;
+	/* Adjust box width to the text */
 	border-radius: 10px;
 	background-color: #f0f0f0;
-	padding: 4px 8px; /* Vertical and horizontal padding */
-	margin: 4px 0; /* Vertical margin */
+	padding: 4px 8px;
+	/* Vertical and horizontal padding */
+	margin: 4px 0;
+	/* Vertical margin */
 	border: 2px solid #0194e2;
 	position: relative;
 }
@@ -1153,12 +1223,15 @@ div[class^="highlight"] pre {
 .level-1 {
 	margin-left: 40px;
 }
+
 .level-2 {
 	margin-left: 80px;
 }
+
 .level-3 {
 	margin-left: 120px;
 }
+
 .level-4 {
 	margin-left: 160px;
 }
@@ -1195,12 +1268,15 @@ div[class^="highlight"] pre {
 	right: 5px;
 	cursor: pointer;
 	opacity: 0.5;
-	color: rgb(129, 129, 131); /* default color */
-	transition: color 0.3s ease, opacity 0.3s ease; /* smooth transition for color and opacity changes */
+	color: rgb(129, 129, 131);
+	/* default color */
+	transition: color 0.3s ease, opacity 0.3s ease;
+	/* smooth transition for color and opacity changes */
 }
 
 .copy-icon:hover {
-	color: #0194e2; /* color when hovered over */
+	color: #0194e2;
+	/* color when hovered over */
 	opacity: 1;
 }
 
@@ -1225,24 +1301,30 @@ div[class^="highlight"] pre {
  */
 
 .boxes-wrapper {
-	display: flex; /* This makes children flex items */
-	justify-content: space-between; /* Creates space between the boxes */
+	display: flex;
+	/* This makes children flex items */
+	justify-content: space-between;
+	/* Creates space between the boxes */
 }
 
 .left-box,
 .right-box {
-	flex: 1; /* This ensures that both boxes try to take up equal width */
+	flex: 1;
+	/* This ensures that both boxes try to take up equal width */
 	padding: 10px;
 	border: 2px solid #ccc;
 	border-radius: 15px;
 	background-color: #f9f9f9;
-	margin: 0 5px; /* Gives some space between the boxes */
-	box-sizing: border-box; /* Ensures padding and border are included in the element's total width and height */
+	margin: 0 5px;
+	/* Gives some space between the boxes */
+	box-sizing: border-box;
+	/* Ensures padding and border are included in the element's total width and height */
 	text-align: left;
 }
 
 .right-box {
-	margin-right: 0; /* Resetting any margin for the right-most box */
+	margin-right: 0;
+	/* Resetting any margin for the right-most box */
 }
 
 /**
@@ -1256,12 +1338,16 @@ div[class^="highlight"] pre {
 }
 
 .hierarchy-item {
-	display: block; /* Start each element on a new line */
-	width: fit-content; /* Adjust box width to the text */
+	display: block;
+	/* Start each element on a new line */
+	width: fit-content;
+	/* Adjust box width to the text */
 	border-radius: 10px;
 	background-color: #f0f0f0;
-	padding: 4px 8px; /* Vertical and horizontal padding */
-	margin: 4px 0; /* Vertical margin */
+	padding: 4px 8px;
+	/* Vertical and horizontal padding */
+	margin: 4px 0;
+	/* Vertical margin */
 	border: 2px solid #0194e2;
 	position: relative;
 }
@@ -1269,12 +1355,15 @@ div[class^="highlight"] pre {
 .level-1 {
 	margin-left: 40px;
 }
+
 .level-2 {
 	margin-left: 80px;
 }
+
 .level-3 {
 	margin-left: 120px;
 }
+
 .level-4 {
 	margin-left: 160px;
 }
@@ -1295,7 +1384,8 @@ a.download-btn {
 }
 
 a.download-btn i.fas {
-	margin-right: 5px; /* Add some space between the icon and the text */
+	margin-right: 5px;
+	/* Add some space between the icon and the text */
 }
 
 /**
@@ -1388,7 +1478,8 @@ a.notebook-download-btn i.fas {
 	padding: 8px 12px !important;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	max-width: 300px; /* Adjust as needed */
+	max-width: 300px;
+	/* Adjust as needed */
 	white-space: nowrap;
 }
 
