Make GenAI/ML docs selector a dropdown in header
Signed-off-by: Fatih Altinok <fatihaltinok@live.com>

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -372,7 +372,7 @@ html[data-genai-theme="true"] {
   transition: opacity 0.2s ease;
 }
 
-.navbar__link:hover::after {
+.navbar__link:hover::before {
   content: "";
   position: absolute;
   bottom: 0;
