--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 /**
  * MLflow Documentation Styling
  * Organized by section and functionality
@@ -15,6 +17,7 @@
 
 /* Apply fonts */
 :root {
+  background-color: rgb(14, 20, 22);
   /* Font family variables */
   --ifm-font-family-base: 'DM Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --ifm-font-family-monospace: 'DM Mono', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
