--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -17,10 +17,13 @@
 
 /* Apply fonts */
 :root {
-  background-color: rgb(14, 20, 22);
+  --background-color: rgb(14, 20, 22);
+  background-color: var(--background-color);
+
   /* Font family variables */
   --ifm-font-family-base: 'DM Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --ifm-font-family-monospace: 'DM Mono', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  --ifm-navbar-background-color: var(--background-color);
 
   /* Font weight variables - per designer specs */
   --font-weight-light: 300;
