Fix colors in dark/light themes
Signed-off-by: Fatih Altinok <fatihaltinok@live.com>

--- a/docs/src/components/FooterMenuItem/FooterMenuItem.module.css
+++ b/docs/src/components/FooterMenuItem/FooterMenuItem.module.css
@@ -1,14 +1,14 @@
-a {
+.link {
   color: white;
   font-size: 15px;
   font-weight: 500;
   text-decoration: none;
 }
 
-a:hover {
+.link:hover {
   text-decoration: none;
 }
 
-a:visited {
+.link:visited {
   color: white;
 }
