--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -415,6 +415,12 @@ html[data-genai-theme="true"] {
   opacity: 0.5;
 }
 
+.github-link {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
 /* --------------------------------
  * 3.1 Navigation with Color Indicators
  * -------------------------------- */
